--- a/charts/rancher-demo/values.yaml
+++ b/charts/rancher-demo/values.yaml
@@ -10,10 +10,10 @@ nameOverride: ""
 fullnameOverride: ""
 
 app:
-  localization:
-    title: "Rancher Demo App"
-    pets: "cows" # available pets include 'cows' and 'chameleons' and possibly 'cowmeleons'
-    color: "black" # container background color (any color name from the CSS pallete)
+  title: "Rancher Demo App"
+  pets: "cows" # available pets include 'cows' and 'chameleons' and possibly 'cowmeleons'
+  color: "black" # container background color (any color name from the CSS pallete)
+  cluster: "n/a"
 
 service:
   type: ClusterIP
